@@ -111,7 +111,7 @@ class ConjugateGradientTest {
                 final double actual = x.getEntry(i);
                 final double expected = ainv.getEntry(i, j);
                 final double delta = 1E-10 * FastMath.abs(expected);
-                final String msg = String.format("entry[%d][%d]", i, j);
+                final String msg = "entry[%d][%d]".formatted(i, j);
                 assertEquals(expected, actual, delta, msg);
             }
         }
@@ -137,7 +137,7 @@ class ConjugateGradientTest {
                 final double actual = x.getEntry(i);
                 final double expected = ainv.getEntry(i, j);
                 final double delta = 1E-10 * FastMath.abs(expected);
-                final String msg = String.format("entry[%d][%d)", i, j);
+                final String msg = "entry[%d][%d)".formatted(i, j);
                 assertEquals(expected, actual, delta, msg);
             }
         }
@@ -163,7 +163,7 @@ class ConjugateGradientTest {
                 final double actual = x.getEntry(i);
                 final double expected = ainv.getEntry(i, j);
                 final double delta = 1E-10 * FastMath.abs(expected);
-                final String msg = String.format("entry[%d][%d]", i, j);
+                final String msg = "entry[%d][%d]".formatted(i, j);
                 assertEquals(expected, actual, delta, msg);
                 assertEquals(1., x0.getEntry(i), Math.ulp(1.), msg);
             }
@@ -224,8 +224,8 @@ class ConjugateGradientTest {
                     final double actual = b.getEntry(i) - y.getEntry(i);
                     final double expected = r.getEntry(i);
                     final double delta = 1E-6 * FastMath.abs(expected);
-                    final String msg = String
-                        .format("column %d, residual %d", i, j);
+                    final String msg = "column %d, residual %d"
+                            .formatted(i, j);
                     assertEquals(expected, actual, delta, msg);
                 }
             }
@@ -345,7 +345,7 @@ class ConjugateGradientTest {
                 final double actual = x.getEntry(i);
                 final double expected = ainv.getEntry(i, j);
                 final double delta = 1E-6 * FastMath.abs(expected);
-                final String msg = String.format("coefficient (%d, %d)", i, j);
+                final String msg = "coefficient (%d, %d)".formatted(i, j);
                 assertEquals(expected, actual, delta, msg);
             }
         }
@@ -401,7 +401,7 @@ class ConjugateGradientTest {
                     final double actual = b.getEntry(i) - y.getEntry(i);
                     final double expected = r.getEntry(i);
                     final double delta = 1E-6 * FastMath.abs(expected);
-                    final String msg = String.format("column %d, residual %d", i, j);
+                    final String msg = "column %d, residual %d".formatted(i, j);
                     assertEquals(expected, actual, delta, msg);
                 }
             }
@@ -443,10 +443,10 @@ class ConjugateGradientTest {
             final RealVector x = cg.solve(a, b);
             final int npcg = pcg.getIterationManager().getIterations();
             final int ncg = cg.getIterationManager().getIterations();
-            msg = String.format(pattern, npcg, ncg);
+            msg = pattern.formatted(npcg, ncg);
             assertTrue(npcg < ncg, msg);
             for (int i = 0; i < n; i++) {
-                msg = String.format("row %d, column %d", i, j);
+                msg = "row %d, column %d".formatted(i, j);
                 final double expected = x.getEntry(i);
                 final double actual = px.getEntry(i);
                 final double delta = 1E-6 * FastMath.abs(expected);
@@ -522,9 +522,9 @@ class ConjugateGradientTest {
             b.set(0.);
             b.setEntry(j, 1.);
             solver.solve(a, b);
-            String msg = String.format("column %d (initialization)", j);
+            String msg = "column %d (initialization)".formatted(j);
             assertEquals(1, count[0], msg);
-            msg = String.format("column %d (finalization)", j);
+            msg = "column %d (finalization)".formatted(j);
             assertEquals(1, count[3], msg);
         }
     }
