@@ -46,8 +46,8 @@ class SubLineTest {
         SubLine sub = new SubLine(segment);
         List<Segment> segments = sub.getSegments();
         assertEquals(1, segments.size());
-        assertEquals(0.0, new Vector3D(-1, -7, 2).distance(segments.get(0).getStart()), 1.0e-10);
-        assertEquals(0.0, new Vector3D( 7, -1, 0).distance(segments.get(0).getEnd()), 1.0e-10);
+        assertEquals(0.0, new Vector3D(-1, -7, 2).distance(segments.getFirst().getStart()), 1.0e-10);
+        assertEquals(0.0, new Vector3D( 7, -1, 0).distance(segments.getFirst().getEnd()), 1.0e-10);
     }
 
     @Test
@@ -55,18 +55,18 @@ class SubLineTest {
         SubLine wholeLine = new Line(new Vector3D(-1, 7, 2), new Vector3D(7, 1, 0), 1.0e-10).wholeLine();
         List<Segment> segments = wholeLine.getSegments();
         assertEquals(1, segments.size());
-        assertTrue(Double.isInfinite(segments.get(0).getStart().getX()) &&
-                          segments.get(0).getStart().getX() < 0);
-        assertTrue(Double.isInfinite(segments.get(0).getStart().getY()) &&
-                          segments.get(0).getStart().getY() > 0);
-        assertTrue(Double.isInfinite(segments.get(0).getStart().getZ()) &&
-                          segments.get(0).getStart().getZ() > 0);
-        assertTrue(Double.isInfinite(segments.get(0).getEnd().getX()) &&
-                          segments.get(0).getEnd().getX() > 0);
-        assertTrue(Double.isInfinite(segments.get(0).getEnd().getY()) &&
-                          segments.get(0).getEnd().getY() < 0);
-        assertTrue(Double.isInfinite(segments.get(0).getEnd().getZ()) &&
-                          segments.get(0).getEnd().getZ() < 0);
+        assertTrue(Double.isInfinite(segments.getFirst().getStart().getX()) &&
+                          segments.getFirst().getStart().getX() < 0);
+        assertTrue(Double.isInfinite(segments.getFirst().getStart().getY()) &&
+                          segments.getFirst().getStart().getY() > 0);
+        assertTrue(Double.isInfinite(segments.getFirst().getStart().getZ()) &&
+                          segments.getFirst().getStart().getZ() > 0);
+        assertTrue(Double.isInfinite(segments.getFirst().getEnd().getX()) &&
+                          segments.getFirst().getEnd().getX() > 0);
+        assertTrue(Double.isInfinite(segments.getFirst().getEnd().getY()) &&
+                          segments.getFirst().getEnd().getY() < 0);
+        assertTrue(Double.isInfinite(segments.getFirst().getEnd().getZ()) &&
+                          segments.getFirst().getEnd().getZ() < 0);
     }
 
     @Test
@@ -93,13 +93,13 @@ class SubLineTest {
                                     new IntervalsSet(Double.NEGATIVE_INFINITY, 0.0, 1.0e-10));
         List<Segment> segments = empty.getSegments();
         assertEquals(1, segments.size());
-        assertTrue(Double.isInfinite(segments.get(0).getStart().getX()) &&
-                          segments.get(0).getStart().getX() < 0);
-        assertTrue(Double.isInfinite(segments.get(0).getStart().getY()) &&
-                          segments.get(0).getStart().getY() < 0);
-        assertTrue(Double.isInfinite(segments.get(0).getStart().getZ()) &&
-                          segments.get(0).getStart().getZ() > 0);
-        assertEquals(0.0, new Vector3D(3, -4, 0).distance(segments.get(0).getEnd()), 1.0e-10);
+        assertTrue(Double.isInfinite(segments.getFirst().getStart().getX()) &&
+                          segments.getFirst().getStart().getX() < 0);
+        assertTrue(Double.isInfinite(segments.getFirst().getStart().getY()) &&
+                          segments.getFirst().getStart().getY() < 0);
+        assertTrue(Double.isInfinite(segments.getFirst().getStart().getZ()) &&
+                          segments.getFirst().getStart().getZ() > 0);
+        assertEquals(0.0, new Vector3D(3, -4, 0).distance(segments.getFirst().getEnd()), 1.0e-10);
     }
 
     @Test
@@ -108,13 +108,13 @@ class SubLineTest {
                                     new IntervalsSet(0.0, Double.POSITIVE_INFINITY, 1.0e-10));
         List<Segment> segments = empty.getSegments();
         assertEquals(1, segments.size());
-        assertEquals(0.0, new Vector3D(3, -4, 0).distance(segments.get(0).getStart()), 1.0e-10);
-        assertTrue(Double.isInfinite(segments.get(0).getEnd().getX()) &&
-                          segments.get(0).getEnd().getX() > 0);
-        assertTrue(Double.isInfinite(segments.get(0).getEnd().getY()) &&
-                          segments.get(0).getEnd().getY() > 0);
-        assertTrue(Double.isInfinite(segments.get(0).getEnd().getZ()) &&
-                          segments.get(0).getEnd().getZ() < 0);
+        assertEquals(0.0, new Vector3D(3, -4, 0).distance(segments.getFirst().getStart()), 1.0e-10);
+        assertTrue(Double.isInfinite(segments.getFirst().getEnd().getX()) &&
+                          segments.getFirst().getEnd().getX() > 0);
+        assertTrue(Double.isInfinite(segments.getFirst().getEnd().getY()) &&
+                          segments.getFirst().getEnd().getY() > 0);
+        assertTrue(Double.isInfinite(segments.getFirst().getEnd().getZ()) &&
+                          segments.getFirst().getEnd().getZ() < 0);
     }
 
     @Test
