@@ -92,7 +92,7 @@ class FieldCloseEventsTest {
         // verify
         List<Event> events1 = detector1.getEvents();
         assertEquals(1, events1.size());
-        assertEquals(9, events1.get(0).getT(), 0.0);
+        assertEquals(9, events1.getFirst().getT(), 0.0);
         List<Event> events2 = detector2.getEvents();
         assertEquals(0, events2.size());
     }
@@ -115,10 +115,10 @@ class FieldCloseEventsTest {
         // verify
         List<Event> events1 = detector1.getEvents();
         assertEquals(1, events1.size());
-        assertEquals(5, events1.get(0).getT(), 0.0);
+        assertEquals(5, events1.getFirst().getT(), 0.0);
         List<Event> events2 = detector2.getEvents();
         assertEquals(1, events2.size());
-        assertEquals(5.5, events2.get(0).getT(), 0.0);
+        assertEquals(5.5, events2.getFirst().getT(), 0.0);
     }
 
     @Test
@@ -138,10 +138,10 @@ class FieldCloseEventsTest {
         // verify
         List<Event> events1 = detector1.getEvents();
         assertEquals(1, events1.size());
-        assertEquals(5, events1.get(0).getT(), 0.0);
+        assertEquals(5, events1.getFirst().getT(), 0.0);
         List<Event> events2 = detector2.getEvents();
         assertEquals(1, events2.size());
-        assertEquals(5, events2.get(0).getT(), 0.0);
+        assertEquals(5, events2.getFirst().getT(), 0.0);
     }
 
     /**
@@ -259,8 +259,8 @@ class FieldCloseEventsTest {
         // finds one or three events. Not 2.
         List<Event> events1 = detector1.getEvents();
         assertEquals(1, events1.size());
-        assertEquals(9.9, events1.get(0).getT(), 0.1);
-        assertTrue(events1.get(0).isIncreasing());
+        assertEquals(9.9, events1.getFirst().getT(), 0.1);
+        assertTrue(events1.getFirst().isIncreasing());
     }
 
     /** "A Tricky Problem" from bug #239. */
@@ -396,9 +396,9 @@ class FieldCloseEventsTest {
         // verify
         // allowed to find t1 or t3.
         assertEquals(1, events.size());
-        assertEquals(t1, events.get(0).getT(), tolerance);
-        assertTrue(events.get(0).isIncreasing());
-        assertSame(detectorB, events.get(0).getDetector());
+        assertEquals(t1, events.getFirst().getT(), tolerance);
+        assertTrue(events.getFirst().isIncreasing());
+        assertSame(detectorB, events.getFirst().getDetector());
     }
 
     /**
@@ -425,9 +425,9 @@ class FieldCloseEventsTest {
 
         // verify
         assertEquals(1, events.size());
-        assertEquals(t1, events.get(0).getT(), 0.0);
-        assertTrue(events.get(0).isIncreasing());
-        assertSame(detectorA, events.get(0).getDetector());
+        assertEquals(t1, events.getFirst().getT(), 0.0);
+        assertTrue(events.getFirst().isIncreasing());
+        assertSame(detectorA, events.getFirst().getDetector());
         // detector worked correctly
         assertEquals(0.0, detectorB.g(state(t1)).getReal());
         assertTrue(detectorB.g(state(t1 - 1e-6)).getReal() < 0);
@@ -459,9 +459,9 @@ class FieldCloseEventsTest {
 
         // verify
         assertEquals(1, events.size());
-        assertEquals(t1, events.get(0).getT(), 0.0);
-        assertTrue(events.get(0).isIncreasing());
-        assertSame(detectorA, events.get(0).getDetector());
+        assertEquals(t1, events.getFirst().getT(), 0.0);
+        assertTrue(events.getFirst().isIncreasing());
+        assertSame(detectorA, events.getFirst().getDetector());
         // detector worked correctly
         assertEquals(0.0, detectorB.g(state(t1)).getReal(), 0.0);
         assertTrue(detectorB.g(state(t1 - 1e-6)).getReal() > 0);
@@ -629,9 +629,9 @@ class FieldCloseEventsTest {
 
         // verify
         assertEquals(1, events.size());
-        assertEquals(t1, events.get(0).getT(), 0.0);
-        assertTrue(events.get(0).isIncreasing());
-        assertSame(detectorA, events.get(0).getDetector());
+        assertEquals(t1, events.getFirst().getT(), 0.0);
+        assertTrue(events.getFirst().isIncreasing());
+        assertSame(detectorA, events.getFirst().getDetector());
     }
 
     /** check when root finding tolerance > event finding tolerance. */
@@ -654,9 +654,9 @@ class FieldCloseEventsTest {
         // verify
         assertEquals(1, events.size());
         // use root finder tolerance instead of event finder tolerance.
-        assertEquals(t1, events.get(0).getT(), 1e-3);
-        assertTrue(events.get(0).isIncreasing());
-        assertSame(detectorA, events.get(0).getDetector());
+        assertEquals(t1, events.getFirst().getT(), 1e-3);
+        assertTrue(events.getFirst().isIncreasing());
+        assertSame(detectorA, events.getFirst().getDetector());
     }
 
     /**
@@ -764,9 +764,9 @@ class FieldCloseEventsTest {
 
         // verify
         assertEquals(1, events.size());
-        assertEquals(t1, events.get(0).getT(), tolerance);
-        assertTrue(events.get(0).isIncreasing());
-        assertSame(detectorA, events.get(0).getDetector());
+        assertEquals(t1, events.getFirst().getT(), tolerance);
+        assertTrue(events.getFirst().isIncreasing());
+        assertSame(detectorA, events.getFirst().getDetector());
     }
 
     /**
@@ -904,9 +904,9 @@ class FieldCloseEventsTest {
         // verify
         assertEquals(1, events.size());
         // use root finder tolerance instead of event finder tolerance.
-        assertEquals(t1, events.get(0).getT(), tolerance);
-        assertTrue(events.get(0).isIncreasing());
-        assertSame(detectorA, events.get(0).getDetector());
+        assertEquals(t1, events.getFirst().getT(), tolerance);
+        assertTrue(events.getFirst().isIncreasing());
+        assertSame(detectorA, events.getFirst().getDetector());
         assertEquals(t1, finalState.getTime().getReal(), tolerance);
 
         // try to resume propagation
@@ -1019,7 +1019,7 @@ class FieldCloseEventsTest {
         assertEquals(10.0, stepHandler.finalTime.getReal(), tolerance);
         assertEquals(10.0,
                 stepHandler.finalState.getTime().getReal(), tolerance);
-        FieldODEStateInterpolator<Binary64> interpolator = stepHandler.interpolators.get(0);
+        FieldODEStateInterpolator<Binary64> interpolator = stepHandler.interpolators.getFirst();
         assertEquals(0.0,
                 interpolator.getPreviousState().getTime().getReal(), tolerance);
         assertEquals(5.0,
@@ -1120,7 +1120,7 @@ class FieldCloseEventsTest {
         // verify
         List<Event> events1 = detector1.getEvents();
         assertEquals(1, events1.size());
-        assertEquals(t1, events1.get(0).getT(), 0.0);
+        assertEquals(t1, events1.getFirst().getT(), 0.0);
         List<Event> events2 = detector2.getEvents();
         assertEquals(0, events2.size());
     }
@@ -1143,10 +1143,10 @@ class FieldCloseEventsTest {
         // verify
         List<Event> events1 = detector1.getEvents();
         assertEquals(1, events1.size());
-        assertEquals(-5, events1.get(0).getT(), 0.0);
+        assertEquals(-5, events1.getFirst().getT(), 0.0);
         List<Event> events2 = detector2.getEvents();
         assertEquals(1, events2.size());
-        assertEquals(-5.5, events2.get(0).getT(), 0.0);
+        assertEquals(-5.5, events2.getFirst().getT(), 0.0);
     }
 
     @Test
@@ -1166,10 +1166,10 @@ class FieldCloseEventsTest {
         // verify
         List<Event> events1 = detector1.getEvents();
         assertEquals(1, events1.size());
-        assertEquals(-5, events1.get(0).getT(), 0.0);
+        assertEquals(-5, events1.getFirst().getT(), 0.0);
         List<Event> events2 = detector2.getEvents();
         assertEquals(1, events2.size());
-        assertEquals(-5, events2.get(0).getT(), 0.0);
+        assertEquals(-5, events2.getFirst().getT(), 0.0);
     }
 
     /**
@@ -1287,8 +1287,8 @@ class FieldCloseEventsTest {
         // finds one or three events. Not 2.
         List<Event> events1 = detector1.getEvents();
         assertEquals(1, events1.size());
-        assertEquals(-9.9, events1.get(0).getT(), 0.2);
-        assertTrue(events1.get(0).isIncreasing());
+        assertEquals(-9.9, events1.getFirst().getT(), 0.2);
+        assertTrue(events1.getFirst().isIncreasing());
     }
 
     /** "A Tricky Problem" from bug #239. */
@@ -1423,9 +1423,9 @@ class FieldCloseEventsTest {
         // verify
         // allowed to report t1 or t3.
         assertEquals(1, events.size());
-        assertEquals(t1, events.get(0).getT(), tolerance);
-        assertTrue(events.get(0).isIncreasing());
-        assertSame(detectorB, events.get(0).getDetector());
+        assertEquals(t1, events.getFirst().getT(), tolerance);
+        assertTrue(events.getFirst().isIncreasing());
+        assertSame(detectorB, events.getFirst().getDetector());
     }
 
     /**
@@ -1452,9 +1452,9 @@ class FieldCloseEventsTest {
 
         // verify
         assertEquals(1, events.size());
-        assertEquals(t1, events.get(0).getT(), 0.0);
-        assertTrue(events.get(0).isIncreasing());
-        assertSame(detectorA, events.get(0).getDetector());
+        assertEquals(t1, events.getFirst().getT(), 0.0);
+        assertTrue(events.getFirst().isIncreasing());
+        assertSame(detectorA, events.getFirst().getDetector());
         // detector worked correctly
         assertEquals(0.0, detectorB.g(state(t1)).getReal());
         assertTrue(detectorB.g(state(t1 + 1e-6)).getReal() < 0);
@@ -1486,9 +1486,9 @@ class FieldCloseEventsTest {
 
         // verify
         assertEquals(1, events.size());
-        assertEquals(t1, events.get(0).getT(), 0.0);
-        assertTrue(events.get(0).isIncreasing());
-        assertSame(detectorA, events.get(0).getDetector());
+        assertEquals(t1, events.getFirst().getT(), 0.0);
+        assertTrue(events.getFirst().isIncreasing());
+        assertSame(detectorA, events.getFirst().getDetector());
         // detector worked correctly
         assertEquals(0.0, detectorB.g(state(t1)).getReal(), 0.0);
         assertTrue(detectorB.g(state(t1 + 1e-6)).getReal() > 0);
@@ -1656,9 +1656,9 @@ class FieldCloseEventsTest {
 
         // verify
         assertEquals(1, events.size());
-        assertEquals(t1, events.get(0).getT(), 0.0);
-        assertTrue(events.get(0).isIncreasing());
-        assertSame(detectorA, events.get(0).getDetector());
+        assertEquals(t1, events.getFirst().getT(), 0.0);
+        assertTrue(events.getFirst().isIncreasing());
+        assertSame(detectorA, events.getFirst().getDetector());
     }
 
     /** check when root finding tolerance > event finding tolerance. */
@@ -1681,9 +1681,9 @@ class FieldCloseEventsTest {
         // verify
         assertEquals(1, events.size());
         // use root finding tolerance since it is larger
-        assertEquals(t1, events.get(0).getT(), 1e-3);
-        assertTrue(events.get(0).isIncreasing());
-        assertSame(detectorA, events.get(0).getDetector());
+        assertEquals(t1, events.getFirst().getT(), 1e-3);
+        assertTrue(events.getFirst().isIncreasing());
+        assertSame(detectorA, events.getFirst().getDetector());
     }
 
     /**
@@ -1791,9 +1791,9 @@ class FieldCloseEventsTest {
 
         // verify
         assertEquals(1, events.size());
-        assertEquals(t1, events.get(0).getT(), tolerance);
-        assertTrue(events.get(0).isIncreasing());
-        assertSame(detectorA, events.get(0).getDetector());
+        assertEquals(t1, events.getFirst().getT(), tolerance);
+        assertTrue(events.getFirst().isIncreasing());
+        assertSame(detectorA, events.getFirst().getDetector());
     }
 
 
@@ -1932,9 +1932,9 @@ class FieldCloseEventsTest {
         // verify
         assertEquals(1, events.size());
         // use root finder tolerance instead of event finder tolerance.
-        assertEquals(t1, events.get(0).getT(), tolerance);
-        assertTrue(events.get(0).isIncreasing());
-        assertSame(detectorA, events.get(0).getDetector());
+        assertEquals(t1, events.getFirst().getT(), tolerance);
+        assertTrue(events.getFirst().isIncreasing());
+        assertSame(detectorA, events.getFirst().getDetector());
         assertEquals(t1, finalState.getTime().getReal(), tolerance);
 
         // try to resume propagation
@@ -2047,7 +2047,7 @@ class FieldCloseEventsTest {
         assertEquals(-10.0, stepHandler.finalTime.getReal(), tolerance);
         assertEquals(-10.0,
                 stepHandler.finalState.getTime().getReal(), tolerance);
-        FieldODEStateInterpolator<Binary64> interpolator = stepHandler.interpolators.get(0);
+        FieldODEStateInterpolator<Binary64> interpolator = stepHandler.interpolators.getFirst();
         assertEquals(0.0,
                 interpolator.getPreviousState().getTime().getReal(), tolerance);
         assertEquals(-5.0,
